<resources>
    <string name="app_name">ToDolistProject</string>
    <string name="title_home">Home</string>
    <string name="To_Day">ToDay</string>
    <string name="Combleted">Completed</string>
    <string name="add_Task">Add Task</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="cancel">cancel</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="new_task">New Task</string>
    <string name="due_date">Due Date:</string>
    <string name="add">Add</string>
    <string name="clear">Clear</string>
    <string name="description_task">Description Task</string>
    <string name="description">Description:</string>
    <string name="dd_mm_yyyy">DD/MM/YYYY</string>
</resources>