<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.todolistproject.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_addFragment"
            app:destination="@id/addFragment" />
        <action
            android:id="@+id/action_navigation_home_to_describtionFragment"
            app:destination="@id/describtionFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_today"
        android:name="com.example.todolistproject.ui.today.ToDayFragment"
        android:label="@string/To_Day"
        tools:layout="@layout/fragment_today" />

    <fragment
        android:id="@+id/navigation_completed"
        android:name="com.example.todolistproject.ui.completed.CompletedFragment"
        android:label="@string/Combleted"
        tools:layout="@layout/fragment_completed" />
    <fragment
        android:id="@+id/addFragment"
        android:name="com.example.todolistproject.ui.add.AddFragment"
        android:label="fragment_add"
        tools:layout="@layout/fragment_add" >
        <action
            android:id="@+id/action_addFragment_to_navigation_home"
            app:destination="@id/navigation_home" />
    </fragment>
    <fragment
        android:id="@+id/describtionFragment"
        android:name="com.example.todolistproject.DescribtionFragment"
        android:label="fragment_describtion"
        tools:layout="@layout/fragment_describtion" />
</navigation>